@@ -1,3 +1,10 @@
+2008-07-15  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclNamesp.c (EnsembleUnknownCallback): Factor out some of
+	the more complex parts of the ensemble code to make it easier to
+	understand and hence to permit tighter compilation of code on the
+	critical path.
+
 2008-07-14  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclParse.c: reverting the "fix" for [Bug 2017583],
